@@ -6,6 +6,7 @@ import view.GameView;
 import controller.InputController;
 
 import javafx.application.Application;
+import javafx.application.Platform;
 import javafx.stage.Stage;
 import javafx.scene.Scene;
 
@@ -29,6 +30,19 @@ public class Core extends Application {
 
         // Tải tài nguyên game
         AssetManager.getInstance().loadAssets();
+        
+        // Tải âm thanh (delay để tránh lỗi module access khi chạy từ IDE)
+        Platform.runLater(() -> {
+            try {
+                util.SoundManager.getInstance().loadSounds();
+            } catch (Exception e) {
+                System.err.println("Không thể tải âm thanh (có thể thiếu VM options): " + e.getMessage());
+                System.err.println("Hãy thêm các VM options sau vào Run Configuration:");
+                System.err.println("--add-modules javafx.controls,javafx.fxml,javafx.media");
+                System.err.println("--add-exports javafx.base/com.sun.javafx=ALL-UNNAMED");
+                System.err.println("--add-opens javafx.base/com.sun.javafx=ALL-UNNAMED");
+            }
+        });
 
         // Khởi tạo Scene và gắn InputController để nghe event
         Scene scene = new Scene(gameView.getRoot());
